changed image size

--- a/chickenThighR.html
+++ b/chickenThighR.html
@@ -9,7 +9,7 @@
 <body>
     <a href="./index.html">HomePage</a>
     <h1>Chicken Thigh Recepie</h1>
-    <img src="./images/ChickenThigh.jpeg" alt="chickenThighRecepie" >
+    <img src="./images/ChickenThigh.jpeg" alt="chickenThighRecepie" width="600px" height="500px">
     <div>
     <h2>Description : </h2>
     <p>
